[tool.poetry]
name = "kolmogorov-smirnov-limitations"
version = "0.1.0"
description = "Scripts for showing the limitations of goodness of fit test like Kolmogorov-smirnov test when parameters are estimated from the data."
authors = ["Pablo Alonso"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter = "^1.0.0"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
statsmodels = "^0.12.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
